# TokenSqueezer

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
tests/: __init__.py  test_code.py  test_json.py  test_log.py  test_markdown.py  test_pipeline.py  test_text.py
tokensqueezer/: __init__.py  __main__.py  cli.py
tokensqueezer/compressors/: __init__.py  code.py  json.py  log.py  markdown.py  text.py
tokensqueezer/core/: __init__.py  compressor.py  content_detector.py  pipeline.py  token_counter.py
tokensqueezer/plugins/: __init__.py  base.py
tokensqueezer/utils/: __init__.py  config.py  stats.py
tokensqueezer/web/: __init__.py  app.py  routes.py
tokensqueezer/web/templates/: index.html
